--- a/alembic.ini
+++ b/alembic.ini
@@ -84,7 +84,8 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql://postgres:YourNewPassword@localhost/elegantdb
+sqlalchemy.url = postgresql://neondb_owner:npg_o5liSAObJ6BC@ep-broad-sea-ag6vvaac-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+
 
 
 
